tests/ui/issues/issue-37534.stderr
error[E0404]: expected trait, found derive macro `Hash`
  --> $DIR/issue-37534.rs:1:16
   |
LL | struct Foo<T: ?Hash> {}
   |                ^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL + use std::hash::Hash;
   |

warning: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/issue-37534.rs:1:15
   |
LL | struct Foo<T: ?Hash> {}
   |               ^^^^^

error[E0392]: type parameter `T` is never used
  --> $DIR/issue-37534.rs:1:12
   |
LL | struct Foo<T: ?Hash> {}
   |            ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0392, E0404.
For more information about an error, try `rustc --explain E0392`.
